# kids-worksheet-generator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
application/application/: settings.py  urls.py
application/core/: admin.py  cron.py  models.py  utils.py  views.py
application/core/generators/: alphabet_match_upper_lower.py  circle_the_group_with_more.py  connect_the_other_half.py  cut_and_match.py  fill_pattern_easy.py  fill_the_number.py  find_different.py  match_image_with_shadow.py  math_add_easy.py  math_add_medium.py  math_minus_easy.py  math_minus_medium.py  maze_easy.py  maze_hard.py  maze_medium.py  missing_letters_easy.py  missing_letters_medium.py  missing_numbers_easy.py  missing_numbers_medium.py  rainbow_counting.py  simple_math_addition.py  wordsearch_easy.py
application/core/management/commands/: generate.py  generate_fill_pattern.py  generate_fill_pattern1.py  generate_fill_pattern2.py  generate_fill_pattern_missing.py  generate_match_with_number.py  generate_maze.py
application/core/migrations/: 0001_initial.py  0002_auto_20200323_1414.py  0003_auto_20200323_1416.py
application/core/static/patterns/: pattern_source.json
application/core/templates/: base.html
application/core/templates/generators/: alphabet_match_upper_lower.html  circle_the_group_with_more.html  connect_the_other_half.html  cut_and_match.html  fill_pattern_easy.html  fill_the_number.html  find_different.html  math.html  (+7 more)
application/frontend/: admin.py  models.py  views.py
application/frontend/migrations/: 0001_initial.py  0002_subscriber_identifier.py
(+12 files in other folders)
